Add evaluation notes

--- a/v1.ipynb
+++ b/v1.ipynb
@@ -1644,6 +1644,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# How to evaluate performance on this\n",
+        "\n",
+        "## Part 1: Is the meaning preserved?\n",
+        "\n",
+        "Introduce an inverse function from \"emojified text\"\n",
+        "to normal text, by replacing emojis with their text meaning:\n",
+        "\n",
+        "- Input sentence: \"Chicken lays eggs\"\n",
+        "- Pre-processed input: \"Chicken lay egg\"\n",
+        "- Output sentence: \"🍕 lays 🥚\"\n",
+        "- Inverse of output: \"pizza lay egg\"\n",
+        "\n",
+        "Then compare \"Pre-processed\" and \"Inverse\" somehow.\n",
+        "\n",
+        "## Part 2: Give positive score for number of used emojis\n",
+        "\n",
+        "**Idea:** The more emojis are used, the bigger the score.\n",
+        "\n",
+        "### Part 3: Combine 1 and 2 into a score\n",
+        "\n",
+        "### Part 4: Reinforcement learning..."
+      ],
+      "metadata": {
+        "id": "h37N8iCuNZI0"
+      }
     }
   ],
   "metadata": {
