--- a/v3-WordNet.ipynb
+++ b/v3-WordNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [
     {
@@ -17,35 +17,35 @@
       "[nltk_data]   Package punkt_tab is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     /Users/anapetrova/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/anapetrova/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
-    "from nltk.stem import PorterStemmer, WordNetLemmatizer, SnowballStemmer, LancasterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
-    "import random\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.corpus import wordnet\n",
     "import re\n",
-    "from gensim.models import Word2Vec\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from nltk.metrics import edit_distance\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import kagglehub\n",
+    "from nltk import pos_tag\n",
     "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('punkt_tab')\n",
     "nltk.download('wordnet')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
     "stop_words = set(stopwords.words('english'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "[4590 rows x 2 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 584,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,21 +164,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pre_process(sentence) -> list[str]:\n",
+    "  lemmatizer = WordNetLemmatizer()\n",
     "  sentence = sentence.lower()\n",
     "  clean_sent = re.sub(r'[^\\w\\s]', '', sentence)\n",
     "  tokens = word_tokenize(clean_sent)\n",
     "  tokens = [t for t in tokens if t not in stop_words]\n",
+    "  tokens = [lemmatizer.lemmatize(t) for t in tokens]\n",
     "  return tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
        "      <th>2</th>\n",
        "      <td>🎆</td>\n",
        "      <td>fireworks</td>\n",
-       "      <td>[fireworks]</td>\n",
+       "      <td>[firework]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -283,7 +285,7 @@
        "     Representation            Name       cleaned_text\n",
        "0                 🎃  jack-o-lantern     [jackolantern]\n",
        "1                 🎄  Christmas tree  [christmas, tree]\n",
-       "2                 🎆       fireworks        [fireworks]\n",
+       "2                 🎆       fireworks         [firework]\n",
        "3                 🎇        sparkler         [sparkler]\n",
        "4                 🧨     firecracker      [firecracker]\n",
        "...             ...             ...                ...\n",
@@ -296,7 +298,7 @@
        "[4590 rows x 3 columns]"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 586,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,48 +311,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_hypernyms(word) -> list[str]:\n",
+    "def get_hypernyms(word, pos_tagged):\n",
     "    hypernyms = set()\n",
-    "    for syn in wordnet.synsets(word):\n",
+    "    for syn in wordnet.synsets(word, pos=pos_tagged):\n",
     "        for hypernym in syn.hypernyms():\n",
-    "            for lemma in hypernym.lemmas():\n",
-    "                hypernyms.add(lemma.name())\n",
+    "                hypernyms.add(hypernym)\n",
     "    return hypernyms"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 255,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def find_synonym_words(wordx):\n",
-    "    keep = []\n",
-    "    synsets = wordnet.synsets(wordx, lang='eng')\n",
-    "    for synset in synsets:\n",
-    "        word = synset.name().split(\".\")[0]\n",
-    "        if word not in keep:\n",
-    "            keep.append(word)\n",
-    "    return keep"
+    "hypernym - дума с широко значение, съставляваща категория, в която попадат думите с по-специфични значения; Например color е hypernym на red"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_matching_emoji(word, emoji_dataset, threshold=0.6):\n",
+    "def find_synonym_words(word, pos_tagged):\n",
+    "    keep = []\n",
+    "    returned = []\n",
+    "    synsets = wordnet.synsets(word, pos=pos_tagged)\n",
+    "    for synset in synsets:\n",
+    "        synonym = synset.name().split(\".\")[0]\n",
+    "        if synonym not in keep:\n",
+    "            keep.append(synonym) #we are interested in the name of the synset\n",
+    "            returned.append(synset)\n",
+    "\n",
+    "    return returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 589,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_emoji_exact_synset(emoji_name, emoji_synsets):\n",
+    "    for synset in emoji_synsets:\n",
+    "        if emoji_name in synset.lemma_names():\n",
+    "            return synset\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def penn_to_wn(tag):\n",
+    "    \"\"\"Convert Penn Treebank POS tags to WordNet POS tags.\"\"\"\n",
+    "    if tag.startswith('J'):\n",
+    "        return wordnet.ADJ\n",
+    "    elif tag.startswith('V'):\n",
+    "        return wordnet.VERB\n",
+    "    elif tag.startswith('N'):\n",
+    "        return wordnet.NOUN\n",
+    "    elif tag.startswith('R'):\n",
+    "        return wordnet.ADV\n",
+    "    else:\n",
+    "        return None  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_best_matching_emoji(word_synset, emoji_dataset, threshold):\n",
     "    best_emoji = None\n",
     "    best_similarity = 0\n",
     "\n",
-    "    word_synsets = wordnet.synsets(word)\n",
-    "\n",
-    "    if not word_synsets:\n",
+    "    if not word_synset:\n",
     "        return None, 0\n",
     "    \n",
     "    emoji_dict = {row[\"Representation\"]: row[\"cleaned_text\"] for _, row in emoji_dataset.iterrows()}\n",
@@ -362,13 +404,12 @@
     "            if not emoji_name_synsets:\n",
     "                continue\n",
     "\n",
-    "            w_synset = word_synsets[0]\n",
-    "            e_synset = emoji_name_synsets[0]\n",
-    "\n",
-    "            w_synset\n",
-    "            e_synset\n",
-    "\n",
-    "            similarity = w_synset.path_similarity(e_synset)\n",
+    "            emoji_synset = get_emoji_exact_synset(emoji_name, emoji_name_synsets)\n",
+    "            \n",
+    "            if not emoji_synset:\n",
+    "                continue\n",
+    "            \n",
+    "            similarity = word_synset.path_similarity(emoji_synset)\n",
     "            if similarity and similarity > best_similarity:\n",
     "                best_similarity = similarity\n",
     "                best_emoji = emoji\n",
@@ -378,33 +419,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def replace_with_emoji(sentence, emoji_dataset, threshold = 0.6) -> tuple[str, dict]:\n",
+    "def replace_with_emoji_wordnet(sentence, emoji_dataset, threshold = 0.6):\n",
     "    tokens = word_tokenize(sentence)\n",
+    "    tagged_words = pos_tag(tokens)\n",
     "    modified_tokens = []\n",
-    "    similarities = {}\n",
+    "    similarities = {} \n",
     "\n",
-    "    for token in tokens:\n",
+    "    for token, tag in tagged_words:\n",
     "        pre_processed_token = pre_process(token)\n",
-    "\n",
+    "        wn_tag = penn_to_wn(tag)\n",
+    "        \n",
     "        if not pre_processed_token:\n",
     "            modified_tokens.append(token)\n",
     "            continue\n",
     "\n",
-    "        best_emoji, best_similarity = get_best_matching_emoji(pre_processed_token[0], emoji_dataset, threshold)\n",
+    "        best_emoji = None\n",
+    "        best_similarity = 0\n",
+    "        \n",
+    "        pre_processed_token = pre_processed_token[0]\n",
+    "        synonyms = find_synonym_words(pre_processed_token, wn_tag)\n",
+    "        for synonum_synset in synonyms:\n",
+    "            best_emoji, best_similarity = get_best_matching_emoji(synonum_synset, emoji_dataset, threshold)\n",
+    "            if best_emoji:\n",
+    "                break\n",
     "\n",
     "        if not best_emoji:\n",
-    "            synonyms = find_synonym_words(pre_processed_token[0])\n",
-    "            for synonym in synonyms:\n",
-    "                best_emoji, best_similarity = get_best_matching_emoji(synonym, emoji_dataset, threshold)\n",
-    "                if best_emoji:\n",
-    "                    break\n",
-    "\n",
-    "        if not best_emoji:\n",
-    "            hypernyms = get_hypernyms(pre_processed_token[0])\n",
+    "            hypernyms = get_hypernyms(pre_processed_token, wn_tag)\n",
     "            for hypernym in hypernyms:\n",
     "                best_emoji, best_similarity = get_best_matching_emoji(hypernym, emoji_dataset, threshold)\n",
     "                if best_emoji:\n",
@@ -424,7 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_with_emoji(sentence):\n",
+    "    modified_sentence, _ = replace_with_emoji_wordnet(sentence, emojis_dataset)\n",
+    "    return modified_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -432,8 +487,8 @@
      "output_type": "stream",
      "text": [
       "Input: I want pizza and a movie night.\n",
-      "Modified Sentence: I 👧 🍕 and a 🎥 🌃 .\n",
-      "Similarities: {'want': 1.0, 'pizza': 1.0, 'movie': 1.0, 'night': 1.0}\n",
+      "Modified Sentence: I want 🍕 and a 🎥 🌃 .\n",
+      "Similarities: {'want': 0.3333333333333333, 'pizza': 1.0, 'movie': 1.0, 'night': 1.0}\n",
       "\n",
       "Input: This is such a sad day.\n",
       "Modified Sentence: This is such a 😥 day .\n",
@@ -441,15 +496,47 @@
       "\n",
       "Input: Happy birthday to you!\n",
       "Modified Sentence: Happy 🎂 to you !\n",
-      "Similarities: {'Happy': 0.2, 'birthday': 1.0}\n",
+      "Similarities: {'Happy': 0.3333333333333333, 'birthday': 1.0}\n",
       "\n",
       "Input: I need a vacation by the beach.\n",
       "Modified Sentence: I need a vacation by the 🏖️ .\n",
-      "Similarities: {'need': 0.5, 'vacation': 0.25, 'beach': 1.0}\n",
+      "Similarities: {'need': 0.3333333333333333, 'vacation': 0.25, 'beach': 1.0}\n",
       "\n",
       "Input: coffee\n",
-      "Modified Sentence: 🍫\n",
+      "Modified Sentence: ☕\n",
       "Similarities: {'coffee': 1.0}\n",
+      "\n",
+      "Input: star boy\n",
+      "Modified Sentence: ✡️ 👦\n",
+      "Similarities: {'star': 1.0, 'boy': 1.0}\n",
+      "\n",
+      "Input: i love you \n",
+      "Modified Sentence: i love you\n",
+      "Similarities: {'love': 0.3333333333333333}\n",
+      "\n",
+      "Input: the pizza is great\n",
+      "Modified Sentence: the 🍕 is great\n",
+      "Similarities: {'pizza': 1.0, 'great': 0.3333333333333333}\n",
+      "\n",
+      "Input: chicken lays eggs \n",
+      "Modified Sentence: 🐔 lays 🥚\n",
+      "Similarities: {'chicken': 1.0, 'lays': 0.25, 'eggs': 1.0}\n",
+      "\n",
+      "Input: i have scored hundred in maths \n",
+      "Modified Sentence: i have scored hundred in maths\n",
+      "Similarities: {'scored': 0.2, 'hundred': 0, 'maths': 0.2}\n",
+      "\n",
+      "Input: She is the queen of hearts \n",
+      "Modified Sentence: She is the queen of ♥️\n",
+      "Similarities: {'queen': 0.3333333333333333, 'hearts': 1.0}\n",
+      "\n",
+      "Input: messi is the king of soccer \n",
+      "Modified Sentence: messi is the king of ⚽\n",
+      "Similarities: {'messi': 0, 'king': 0.25, 'soccer': 1.0}\n",
+      "\n",
+      "Input: lets build a rocket \n",
+      "Modified Sentence: lets build a 🚀\n",
+      "Similarities: {'lets': 0.25, 'build': 0.3333333333333333, 'rocket': 1.0}\n",
       "\n"
      ]
     }
@@ -460,15 +547,23 @@
     "    \"This is such a sad day.\",\n",
     "    \"Happy birthday to you!\",\n",
     "    \"I need a vacation by the beach.\",\n",
-    "    \"coffee\"\n",
+    "    \"coffee\",\n",
+    "    \"star boy\",\n",
+    "    \"i love you \",\n",
+    "    \"the pizza is great\",\n",
+    "    \"chicken lays eggs \",\n",
+    "    \"i have scored hundred in maths \",\n",
+    "    \"She is the queen of hearts \",\n",
+    "    \"messi is the king of soccer \",\n",
+    "    \"lets build a rocket \"  \n",
     "]\n",
     "\n",
-    "\n",
     "for sent in test_sentences:\n",
-    "    modified_sentence, similarity = replace_with_emoji(sent, emojis_dataset)\n",
+    "    modified_sentence, similarity = replace_with_emoji_wordnet(sent, emojis_dataset)\n",
     "    print(f\"Input: {sent}\")\n",
     "    print(f\"Modified Sentence: {modified_sentence}\")\n",
-    "    print(f\"Similarities: {similarity}\\n\")"
+    "    print(f\"Similarities: {similarity}\\n\")\n",
+    "\n"
    ]
   }
  ],
