--- a/v2-CBOW.ipynb
+++ b/v2-CBOW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[4590 rows x 7 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/jc/rb1l1qnx0xn0b9pqywbb61nh0000gn/T/ipykernel_86622/1947398133.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/jc/rb1l1qnx0xn0b9pqywbb61nh0000gn/T/ipykernel_19819/1947398133.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -398,7 +398,7 @@
        "[4590 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,12 +419,12 @@
     "# google_news_model = api.load(\"word2vec-google-news-300\")\n",
     "\n",
     "tokenized_text8 = [pre_process(line) for line in text8_ds.readlines()]\n",
-    "cbow_model = Word2Vec(sentences=tokenized_text8, vector_size=100, window=5, min_count=2, sg=0)"
+    "cbow_model = Word2Vec(sentences=tokenized_text8, vector_size=100, window=5, min_count=2, sg=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,52 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def replace_with_emoji(sentence: str, model: Word2Vec, emoji_embeddings: dict, threshold: float = 0.6) -> tuple[str, dict]:\n",
-    "    tokens = word_tokenize(sentence)\n",
-    "    modified_tokens = []\n",
-    "    similarities = {}\n",
-    "\n",
-    "    for token in tokens:\n",
-    "        preprocessed_tokens = pre_process(token)\n",
-    "\n",
-    "        if not preprocessed_tokens: # Skip if token is empty\n",
-    "            modified_tokens.append(token)\n",
-    "            continue\n",
-    "\n",
-    "        preprocessed_word = preprocessed_tokens[0]\n",
-    "\n",
-    "        if preprocessed_word in model.wv:  # Ensure word exists in Word2Vec model\n",
-    "            word_embedding = model.wv[preprocessed_word] # Get the word embedding\n",
-    "            best_match = None\n",
-    "            best_similarity = 0\n",
-    "\n",
-    "            for emoji, emoji_embedding in emoji_embeddings.items():\n",
-    "                similarity = cosine_similarity([word_embedding], [emoji_embedding])[0][0] \n",
-    "\n",
-    "                if similarity > best_similarity:\n",
-    "                    best_match = emoji\n",
-    "                    best_similarity = similarity\n",
-    "\n",
-    "            similarities[preprocessed_word] = best_similarity\n",
-    "\n",
-    "            if best_similarity >= threshold:\n",
-    "                modified_tokens.append(best_match)\n",
-    "            else:\n",
-    "                modified_tokens.append(token)\n",
-    "        else:\n",
-    "            modified_tokens.append(token) \n",
-    "\n",
-    "    modified_sentence = \" \".join(modified_tokens)\n",
-    "    return modified_sentence, similarities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25389,7 +25344,7 @@
        " ...}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25405,7 +25360,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_with_emoji_cbow(sentence, model, emoji_embeddings, threshold = 0.4):\n",
+    "    tokens = word_tokenize(sentence)\n",
+    "    modified_tokens = []\n",
+    "    similarities = {}\n",
+    "\n",
+    "    for token in tokens:\n",
+    "        preprocessed_tokens = pre_process(token)\n",
+    "\n",
+    "        if not preprocessed_tokens: # Skip if token is empty\n",
+    "            modified_tokens.append(token)\n",
+    "            continue\n",
+    "\n",
+    "        preprocessed_word = preprocessed_tokens[0]\n",
+    "\n",
+    "        if preprocessed_word in model.wv:  # Ensure word exists in Word2Vec model\n",
+    "            word_embedding = model.wv[preprocessed_word] # Get the word embedding\n",
+    "            best_match = None\n",
+    "            best_similarity = 0\n",
+    "\n",
+    "            for emoji, emoji_embedding in emoji_embeddings.items():\n",
+    "                similarity = cosine_similarity([word_embedding], [emoji_embedding])[0][0] \n",
+    "\n",
+    "                if similarity > best_similarity:\n",
+    "                    best_match = emoji\n",
+    "                    best_similarity = similarity\n",
+    "\n",
+    "            similarities[preprocessed_word] = best_similarity\n",
+    "\n",
+    "            if best_similarity >= threshold:\n",
+    "                modified_tokens.append(best_match)\n",
+    "            else:\n",
+    "                modified_tokens.append(token)\n",
+    "        else:\n",
+    "            modified_tokens.append(token) \n",
+    "\n",
+    "    modified_sentence = \" \".join(modified_tokens)\n",
+    "    return modified_sentence, similarities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace_with_emoji(sentence):\n",
+    "    modified_sentence, _ = replace_with_emoji_cbow(sentence, cbow_model, emoji_embeddings)\n",
+    "    return modified_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -25417,7 +25428,7 @@
       "Similarities: {'want': 0.31245157, 'pizza': 0.99999994, 'movie': 0.69561756, 'night': 0.7608175}\n",
       "\n",
       "Input: This is such a sad day.\n",
-      "Modified Sentence: This is such a sad day .\n",
+      "Modified Sentence: This is such a 😥 day .\n",
       "Similarities: {'sad': 0.5488049, 'day': 0.31487155}\n",
       "\n",
       "Input: Happy birthday to you!\n",
@@ -25425,12 +25436,44 @@
       "Similarities: {'happy': 0.36334664, 'birthday': 0.70465225}\n",
       "\n",
       "Input: I need a vacation by the beach.\n",
-      "Modified Sentence: I need a vacation by the 🏖️ .\n",
+      "Modified Sentence: I 👯 a vacation by the 🏖️ .\n",
       "Similarities: {'need': 0.41794932, 'vacation': 0.28270304, 'beach': 0.7251611}\n",
       "\n",
       "Input: coffee\n",
-      "Modified Sentence: coffee\n",
+      "Modified Sentence: 🇨🇴\n",
       "Similarities: {'coffee': 0.41339368}\n",
+      "\n",
+      "Input: star boy\n",
+      "Modified Sentence: ✴️ 👦\n",
+      "Similarities: {'star': 0.9999999, 'boy': 0.9999999}\n",
+      "\n",
+      "Input: i love you \n",
+      "Modified Sentence: i 🏩 you\n",
+      "Similarities: {'love': 0.7582667}\n",
+      "\n",
+      "Input: the pizza is great\n",
+      "Modified Sentence: the 🍕 is 🏣\n",
+      "Similarities: {'pizza': 0.99999994, 'great': 0.41022027}\n",
+      "\n",
+      "Input: chicken lays eggs \n",
+      "Modified Sentence: 🐔 lays eggs\n",
+      "Similarities: {'chicken': 1.0, 'lays': 0.33771765, 'eggs': 0.33483785}\n",
+      "\n",
+      "Input: i have scored hundred in maths \n",
+      "Modified Sentence: i have scored 💯 in maths\n",
+      "Similarities: {'scored': 0.34727943, 'hundred': 0.70248854, 'maths': 0.34746337}\n",
+      "\n",
+      "Input: She is the queen of hearts \n",
+      "Modified Sentence: She is the queen of 💞\n",
+      "Similarities: {'queen': 0.30738485, 'hearts': 0.702605}\n",
+      "\n",
+      "Input: messi is the king of soccer \n",
+      "Modified Sentence: messi is the king of ⚽\n",
+      "Similarities: {'messi': 0.29928052, 'king': 0.32496077, 'soccer': 0.6821861}\n",
+      "\n",
+      "Input: lets build a rocket \n",
+      "Modified Sentence: lets build a 🚀\n",
+      "Similarities: {'lets': 0.32700324, 'build': 0.34940726, 'rocket': 1.0}\n",
       "\n"
      ]
     }
@@ -25441,11 +25484,19 @@
     "    \"This is such a sad day.\",\n",
     "    \"Happy birthday to you!\",\n",
     "    \"I need a vacation by the beach.\",\n",
-    "    \"coffee\"\n",
+    "    \"coffee\",\n",
+    "    \"star boy\",\n",
+    "    \"i love you \",\n",
+    "    \"the pizza is great\",\n",
+    "    \"chicken lays eggs \",\n",
+    "    \"i have scored hundred in maths \",\n",
+    "    \"She is the queen of hearts \",\n",
+    "    \"messi is the king of soccer \",\n",
+    "    \"lets build a rocket \"  \n",
     "]\n",
     "\n",
     "for sent in test_sentences:\n",
-    "    modified_sentence, similarities = replace_with_emoji(sent, cbow_model, emoji_embeddings)\n",
+    "    modified_sentence, similarities = replace_with_emoji_cbow(sent, cbow_model, emoji_embeddings)\n",
     "    print(f\"Input: {sent}\")\n",
     "    print(f\"Modified Sentence: {modified_sentence}\")\n",
     "    print(f\"Similarities: {similarities}\\n\")"
