--- a/ivanasen_final.ipynb
+++ b/ivanasen_final.ipynb
@@ -125,10 +125,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# TODO: Ани и Тони - документация на моделите + примери с код"
+        "## TODO Ани: Wordnet модел"
       ],
       "metadata": {
         "id": "NqAYcOXbXaoM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## TODO Тони: Skip-Gram модел"
+      ],
+      "metadata": {
+        "id": "XQBa9a-xgNsu"
       }
     },
     {
