--- a/final.ipynb
+++ b/final.ipynb
@@ -7,12 +7,56 @@
       },
       "source": [
         "# Емоджи генератор\n",
-        "#### Проект по \"Обработка на естествени езици\""
+        "#### Проект по \"Подходи за обработка на естествен език\" 2024/25\n",
+        "\n",
+        "**Изработили:**\n",
+        "- Ана Петрова (ФН: 4M13400583)\n",
+        "- Антонина Ускова (ФН: 8MI3400459)\n",
+        "- Иван-Асен Чакъров (ФН: 6MI3400634)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0QBsKLxbrUih"
+      },
+      "source": [
+        "## Описание на проблема\n",
+        "\n",
+        "Проблемът, който решаваме в този проект е следният:\n",
+        "По даден входящ текст на английски език, да се имплементира алгоритъм, който променя някои от думите\n",
+        "в Unicode емоджита. Всяка дума може или да не бъде заместена или да бъде заместена с точно $1$ емоджи. Целта е максимално много да се запази смисъла на оригиналния текст\n",
+        "и да има максимално много емоджита.\n",
+        "\n",
+        "Погледнато грубо, задачата е подобна на машинен превод от английски към \"език на емоджитата\".\n",
+        "Основната разлика, която опростява и решенията на този проблем е, че този \"език на емоджитата\"\n",
+        "има абсолютно същата граматика като входящия език, тъй като е просто замяна на някои думи с други.\n",
+        "\n",
+        "Както се подразбира от горе, не е задължително всички думи да бъдат заменени с емоджита.\n",
+        "Всеки алгоритъм трябва да решава кои думи и с какво е най-добре да бъдат заменени.\n",
+        "- Пример за частична замяна:\n",
+        "    ```\n",
+        "    Вход: \"Chicken lays eggs\"\n",
+        "    Изход: \"🐔 lays 🥚\"\n",
+        "    ```\n",
+        "- Пример за \"перфектна\" замяна:\n",
+        "    ```\n",
+        "    Вход: \"star boy\"\n",
+        "    Изход: \"⭐ 👦\"\n",
+        "    ```\n",
+        "- Пример за \"лоша\" замяна:\n",
+        "    ```\n",
+        "    Вход: \"I want a castle for Christmas\"\n",
+        "    Изход: \"I want a 🍕 for 🐔\"\n",
+        "    ```\n",
+        "\n",
+        "Ще представим няколко подхода за решаване на задачата и след това ще ги оценим като използваме\n",
+        "наш метод, направен специално за оценяване на модели, решаващи тази задача."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,46 +168,11 @@
         "\n",
         "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder/4\")\n",
         "\n",
-        "stop_words = set(stopwords.words('english'))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0QBsKLxbrUih"
-      },
-      "source": [
-        "## Описание на проблема\n",
+        "stop_words = set(stopwords.words('english'))\n",
         "\n",
-        "Проблемът, който решаваме в този проект е следният:\n",
-        "По даден входящ текст на английски език, да се имплементира алгоритъм, който променя някои от думите\n",
-        "в Unicode емоджита. Всяка дума може или да не бъде заместена или да бъде заместена с точно $1$ емоджи. Целта е максимално много да се запази смисъла на оригиналния текст\n",
-        "и да има максимално много емоджита.\n",
-        "\n",
-        "Погледнато грубо, задачата е подобна на машинен превод от английски към \"език на емоджитата\".\n",
-        "Основната разлика, която опростява и решенията на този проблем е, че този \"език на емоджитата\"\n",
-        "има абсолютно същата граматика като входящия език, тъй като е просто замяна на някои думи с други.\n",
-        "\n",
-        "Както се подразбира от горе, не е задължително всички думи да бъдат заменени с емоджита.\n",
-        "Всеки алгоритъм трябва да решава кои думи и с какво е най-добре да бъдат заменени.\n",
-        "- Пример за частична замяна:\n",
-        "    ```\n",
-        "    Вход: \"Chicken lays eggs\"\n",
-        "    Изход: \"🐔 lays 🥚\"\n",
-        "    ```\n",
-        "- Пример за \"перфектна\" замяна:\n",
-        "    ```\n",
-        "    Вход: \"star boy\"\n",
-        "    Изход: \"⭐ 👦\"\n",
-        "    ```\n",
-        "- Пример за \"лоша\" замяна:\n",
-        "    ```\n",
-        "    Вход: \"I want a castle for Christmas\"\n",
-        "    Изход: \"I want a 🍕 for 🐔\"\n",
-        "    ```\n",
-        "\n",
-        "Ще представим няколко подхода за решаване на задачата и след това ще ги оценим като използваме\n",
-        "наш метод, направен специално за оценяване на модели, решаващи тази задача."
+        "###############################################################\n",
+        "# End: Boilerplate code for setting up the rest of the notebook\n",
+        "###############################################################"
       ]
     },
     {
@@ -283,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -682,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "Z2ZWZn4tYwrU"
       },
@@ -714,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1123,7 +1132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "1mb1X5qHZg83"
       },
@@ -1154,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "R452lUykZtuG"
       },
@@ -1186,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1227,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1257,7 +1266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "iNLspme4aYs4"
       },
@@ -1281,7 +1290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1317,7 +1326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "eeP3NUOhakSL"
       },
@@ -1381,7 +1390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "ez2w7Ny6a1Z6"
       },
@@ -1436,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2291,7 +2300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2314,7 +2323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2346,7 +2355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
